# spacewestern

./: .gitignore  CLAUDE.md  Cargo.toml  DISPATCH_BLENDER_SPRITES.md  MASTER_SPEC.md  README.md  TODO.md  Trunk.toml  index.html
.github/workflows/: deploy.yml
assets/blender/: berry_bush.blend  conifer.blend  oak.blend  render_conifer.py  rock.blend
docs/: CONTEXT.md  CRAFTING.md  OAK_BUILD.md  PHYSICS_SYSTEM.md  PLAN.md  README.md  SPEC.md  SPRITES.md  ai-system.md  crafting-tree.md  game-design.md  refactoring-todo.md  tree-palette.md
docs/dn/: DN-001-blender-sprite-pipeline.md  DN-002-block-vs-surface-items.md  DN-003-subgrid-placement.md  DN-004-thin-walls.md  DN-005-windows-doors-as-wall-features.md  DN-006-subgrid-system-implications.md  DN-007-building-patterns.md  DN-008-three-layer-world-model.md  DN-009-pleb-sprites.md  DN-010-discovery-layer.md  DN-011-combat-rework.md  DN-012-wound-system.md  DN-013-communication-flocking.md  DN-013-tall-grass.md  DN-015-leaders-and-ranks.md  DN-016-terrain-elevation-and-water.md  (+18 more)
shaders/: raytrace.comp
src/: app.rs  audio.rs  blit.wgsl  block_defs.rs  blocks.toml  build.rs  camera.rs  cards.rs  comms.rs  creature_defs.rs  creatures.rs  creatures.toml  dust.rs  fire.rs  fluid.rs  fluid.wgsl  fluid_dye.wgsl  fluid_pressure.wgsl  fog.rs  gpu_init.rs  grid.rs  input.rs  item_defs.rs  items.toml  lib.rs  lightmap.wgsl  lightmap_propagate.wgsl  main.rs  materials.rs  mining.rs  morale.rs  needs.rs  physics.rs  pipes.rs  placement.rs  pleb.rs  power.wgsl  raytrace.wgsl  recipe_defs.rs  recipes.toml  (+16 more)
tests/: integration.rs
(+67 files in other folders)
