[package]
name = "rayworld"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "27"
winit = "0.30"
egui = "0.33"
egui-wgpu = "0.33"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
cfg-if = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4"
env_logger = "0.11"
egui-winit = "0.33"

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui-winit = { version = "0.33", default-features = false }
console_error_panic_hook = "0.1"
console_log = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
] }
